--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">WallCrazy</string>
     <string name="category">category</string>
+
+    <string name="set_as_wallpaper">Set as wallpaper</string>
 </resources>
