--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
 
     <string name="something_went_wrong">Something went wrong. Check your VPN and try again.</string>
     <string name="retry">Retry</string>
+
+    <string name="settings">Settings</string>
+    <string name="night_mode">Night mode</string>
 </resources>
