--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
 
     <string name="settings">Settings</string>
     <string name="night_mode">Night mode</string>
+
+    <string name="home_screen">Home screen</string>
+    <string name="lock_screen">Lock screen</string>
+    <string name="home_lock_screen">Home &amp; Lock screen</string>
+
+    <string name="done">Done</string>
 </resources>
